Add BRANCH_PREFIX for main (empty string)

--- a/admin.html
+++ b/admin.html
@@ -284,6 +284,9 @@
         // Contraseña configurada (cambiar por una segura)
         const ADMIN_PASSWORD = 'blowdance2025';
 
+        // Rama actual (para separar storage entre ramas)
+        const BRANCH_PREFIX = ''; // main usa sin prefijo, v1 usa 'v1_'
+
         // GitHub config
         const GITHUB_TOKEN = 'TU_GITHUB_TOKEN_AQUI'; // Lo configuramos después
         const REPO_OWNER = 'gkachele';
