--- a/index.html
+++ b/index.html
@@ -695,6 +695,9 @@
 
     <script src="https://pagecounter.io/js/pagecounter.js" defer></script>
     <script>
+        // Rama actual (para separar storage entre ramas)
+        const BRANCH_PREFIX = ''; // main usa sin prefijo, v1 usa 'v1_'
+
         // PageCounter API - Real visitor counter
         // Registrate en https://pagecounter.io para obtener tu ID
         // Reemplaza 'TU_ID_DE_CONTADOR' con el ID que te dan
